--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div id="root">
+        <p id="watermark">&nbsp;</p>
+    </div>
 </body>
 </html>
