--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="root">
+        <div id="base">
         <div id="wait_beforeplay" style="z-index:1234567890; position: absolute; top:0;left:0; width:100%;height:100%;background:#333;padding:32px;">Loading...</div>
         <div id="beforeplay">
             <h2 style="margin-bottom:8px; ">Before you start</h2>
@@ -17,6 +18,7 @@
             <button id="play">Start</button>
         </div>
         <p id="watermark">&nbsp;</p>
+    </div>
     </div>
 </body>
 </html>
