--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <div id="base">
         <div id="wait_beforeplay" style="z-index:1234567890; position: absolute; top:0;left:0; width:100%;height:100%;background:#333;padding:32px;">Loading...</div>
         <div id="beforeplay">
-            <h2 style="margin-bottom:8px; ">Before you start</h2>
-            <p style="font-size:16px; max-width:480px;">I don't have anything to say except uh you have to press the start button for audio to play</p>
-            <button id="play">Start</button>
+            <button id="play">click to start</button>
         </div>
         <p id="watermark">&nbsp;</p>
     </div>
